# FastAPI_Rest_Contact_book

./: .env.example  .gitignore  Dockerfile  Procfile  main.py  pyproject.toml  test.db
docs/: modules.rst  repository.rst  routes.rst  services.rst
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 2d0d5377c8d2_new.py  38d21d920372_new.py  9af60f45fc86_create_initial_tables.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  user.py
src/services/: auth.py  email.py
src/services/templates/: verify_email.html
tests/: conftest.py  test_func_signup_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
